--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="user_login">User Name</string>
     <string name="password_login">Password</string>
     <string name="login">Login</string>
-    <string name="site">Sitio</string>
+    <string name="site">Sitio:</string>
     <string name="totalActivities">total Activities: </string>
     <string name="status">Status: </string>
+    <string name="tab_new_order">NEW WORK ORDERS</string>
+    <string name="tab_progress">IN PROGRESS</string>
 </resources>
