--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="my_sites">My Sites</string>
     <string name="documentacion">Documentacion</string>
     <string name="chat">Chat</string>
+    <string name="total_new">Total new</string>
+    <string name="percentage">%</string>
+
 </resources>
